fix: working dir

--- a/.github/workflows/ci-release-pipeline.yml
+++ b/.github/workflows/ci-release-pipeline.yml
@@ -21,7 +21,7 @@ jobs:
         sudo npm install -g tfx-cli semver
 
     - name: Compile Javascript
-      working-directory: carbonetesTask
+      working-directory: jackedTask
       run: |
         tsc
         mv task.release.json task.json
