fix: update action

--- a/.github/workflows/ci-release-pipeline.yml
+++ b/.github/workflows/ci-release-pipeline.yml
@@ -23,6 +23,7 @@ jobs:
       working-directory: jackedTask
       run: |
         tsc
+        mv task.release.json task.json
 
     - name: Bump version in Manifest
       run: |
@@ -35,7 +36,7 @@ jobs:
 
     - name: Update Version in Task Manifest
       run: |
-        current_version=$(cat jackedTask/task.release.json | jq -r '.version')
+        current_version=$(cat jackedTask/task.json | jq -r '.version')
         major=$(echo $current_version | jq '.Major')
         minor=$(echo $current_version | jq '.Minor')
         patch=$(echo $current_version | jq '.Patch')
@@ -43,9 +44,7 @@ jobs:
         new_minor=$minor
         new_patch=$(expr $patch + 1)
         updated_version="{ \"Major\": $new_major, \"Minor\": $new_minor, \"Patch\": $new_patch }"
-        jq ".version = $updated_version" jackedTask/task.release.json > jackedTask/task.release.json.tmp && mv jackedTask/task.release.json.tmp jackedTask/task.release.json
-        
-        mv task.release.json task.json
+        jq ".version = $updated_version" jackedTask/task.json > jackedTask/task.json.tmp && mv jackedTask/task.json.tmp jackedTask/task.json
 
     - name: Publish Plugin
       run: |
