fix: remove tmp ignore policy and modify build logs

--- a/jackedTask/task.release.json
+++ b/jackedTask/task.release.json
@@ -53,35 +53,11 @@
             "helpMarkDown": "Select a threshold that will fail the build when equal to or above the severity found in the results."
         },
         {
-            "name": "ignoreCves",
-            "type": "string",
-            "label": "Ignore CVEs",
-            "defaultValue": "cve-2023-2464,cve-2022-3423",
-            "required": false,
-            "helpMarkDown": "Specify the CVEs to ignore."
-        },
-        {
-            "name": "ignorePackageNames",
-            "type": "string",
-            "label": "Ignore Package Names",
-            "defaultValue": "package1,package2",
-            "required": false,
-            "helpMarkDown": "Specify the package names to ignore."
-        },
-        {
-            "name": "skipDbUpdate",
-            "type": "boolean",
-            "label": "Skip Database Update",
-            "defaultValue": "false",
-            "required": false,
-            "helpMarkDown": "Skip Database Update Checking."
-        },
-        {
             "name": "skipFail",
             "type": "boolean",
             "label": "Skip Fail Build",
             "defaultValue": "false",
-            "required": false,
+            "required": true,
             "helpMarkDown": "Restrict the plugin from failing the build based on the assessment result."
         }
     ],
