--- a/jackedTask/task.release.json
+++ b/jackedTask/task.release.json
@@ -56,7 +56,7 @@
             "name": "skipFail",
             "type": "boolean",
             "label": "Skip Fail Build",
-            "defaultValue": "false",
+            "defaultValue": false,
             "required": true,
             "helpMarkDown": "Restrict the plugin from failing the build based on the assessment result."
         }
